Added Selenium Grid

--- a/test-output/old/Ecommerce test run/classes.html
+++ b/test-output/old/Ecommerce test run/classes.html
@@ -11,7 +11,15 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>PlaceOrder</td>
+<td>placeorder</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Checkoutcart</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Addtocart</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
