--- a/test-output/index.html
+++ b/test-output/index.html
@@ -23,7 +23,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -37,7 +37,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Ecommerce_test_run">
-              <span class="suite-name border-failed">Ecommerce test run</span>
+              <span class="suite-name border-passed">Ecommerce test run</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -90,21 +90,31 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method, 1 failed,   </span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Ecommerce_test_run" class="hide-methods failed suite-Ecommerce_test_run"> (hide)</a> <!-- hide-methods failed suite-Ecommerce_test_run -->
-                      <a href="#" panel-name="suite-Ecommerce_test_run" class="show-methods failed suite-Ecommerce_test_run"> (show)</a> <!-- show-methods failed suite-Ecommerce_test_run -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-Ecommerce_test_run" class="hide-methods passed suite-Ecommerce_test_run"> (hide)</a> <!-- hide-methods passed suite-Ecommerce_test_run -->
+                      <a href="#" panel-name="suite-Ecommerce_test_run" class="show-methods passed suite-Ecommerce_test_run"> (show)</a> <!-- show-methods passed suite-Ecommerce_test_run -->
                     </span>
-                    <div class="method-list-content failed suite-Ecommerce_test_run">
+                    <div class="method-list-content passed suite-Ecommerce_test_run">
                       <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Ecommerce_test_run" title="com.ecommerce.selenium.pagefactory.framework.OrderFlow" hash-for-method="PlaceOrder">PlaceOrder</a> <!-- method navigator-link -->
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Ecommerce_test_run" title="com.ecommerce.selenium.pagefactory.framework.OrderFlow" hash-for-method="Addtocart">Addtocart</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content failed suite-Ecommerce_test_run -->
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Ecommerce_test_run" title="com.ecommerce.selenium.pagefactory.framework.OrderFlow" hash-for-method="Checkoutcart">Checkoutcart</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Ecommerce_test_run" title="com.ecommerce.selenium.pagefactory.framework.OrderFlow" hash-for-method="placeorder">placeorder</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content passed suite-Ecommerce_test_run -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -116,44 +126,35 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Ecommerce_test_run" class="panel Ecommerce_test_run">
-          <div class="suite-Ecommerce_test_run-class-failed">
+          <div class="suite-Ecommerce_test_run-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
+              <img src="passed.png"/>
               <span class="class-name">com.ecommerce.selenium.pagefactory.framework.OrderFlow</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="PlaceOrder">
-                  </a> <!-- PlaceOrder -->
-                  <span class="method-name">PlaceOrder</span>
-                  <div class="stack-trace">org.openqa.selenium.NoSuchWindowException: no such window: target window already closed
-from unknown error: web view not found
-  (Session info: chrome=61.0.3163.100)
-  (Driver info: chromedriver=2.33.506120 (e3e53437346286c0bc2d2dc9aa4915ba81d9023f),platform=Windows NT 10.0.15063 x86_64) (WARNING: The server did not provide any stacktrace information)
-Command duration or timeout: 5 milliseconds
-Build info: version: &apos;2.45.0&apos;, revision: &apos;5017cb8e7ca8e37638dc3091b2440b90a1d8686f&apos;, time: &apos;2015-02-27 09:10:26&apos;
-System info: host: &apos;NEWT526&apos;, ip: &apos;10.0.75.1&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;1.8.0_111&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Capabilities [{applicationCacheEnabled=false, rotatable=false, mobileEmulationEnabled=false, networkConnectionEnabled=false, chrome={chromedriverVersion=2.33.506120 (e3e53437346286c0bc2d2dc9aa4915ba81d9023f), userDataDir=C:\Users\Shahed\AppData\Local\Temp\scoped_dir13432_17440}, takesHeapSnapshot=true, pageLoadStrategy=normal, databaseEnabled=false, handlesAlerts=true, hasTouchScreen=false, version=61.0.3163.100, platform=XP, browserConnectionEnabled=false, nativeEvents=true, acceptSslCerts=true, locationContextEnabled=true, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true, setWindowRect=true, unexpectedAlertBehaviour=}]
-Session ID: 9fe531c6ec8c2d4729488d68f6111730
-	at org.openqa.selenium.remote.ErrorHandler.createThrowable(ErrorHandler.java:204)
-	at org.openqa.selenium.remote.ErrorHandler.throwIfResponseFailed(ErrorHandler.java:156)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:599)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:622)
-	at org.openqa.selenium.remote.RemoteWebDriver.getCurrentUrl(RemoteWebDriver.java:319)
-	at com.ecommerce.selenium.pagefactory.framework.browser.Browser.setCachedPage(Browser.java:165)
-	at com.ecommerce.selenium.pagefactory.framework.browser.web.WebBrowser.openPageByURL(WebBrowser.java:198)
-	at com.ecommerce.selenium.pagefactory.framework.browser.web.WebBrowser.openPageByURL(WebBrowser.java:212)
-	at com.ecommerce.selenium.pagefactory.framework.browser.web.WebBrowser.openPageByURL(WebBrowser.java:175)
-	at com.ecommerce.selenium.pagefactory.framework.functions.Wrapper.openApplication(Wrapper.java:29)
-	at com.ecommerce.selenium.pagefactory.framework.OrderFlow.PlaceOrder(OrderFlow.java:19)
-... Removed 28 stack frames
-</div> <!-- stack-trace -->
+                  <a name="Addtocart">
+                  </a> <!-- Addtocart -->
+                  <span class="method-name">Addtocart</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Checkoutcart">
+                  </a> <!-- Checkoutcart -->
+                  <span class="method-name">Checkoutcart</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="placeorder">
+                  </a> <!-- placeorder -->
+                  <span class="method-name">placeorder</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Ecommerce_test_run-class-failed -->
+          </div> <!-- suite-Ecommerce_test_run-class-passed -->
         </div> <!-- panel Ecommerce_test_run -->
         <div panel-name="test-xml-Ecommerce_test_run" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -163,7 +164,7 @@ Session ID: 9fe531c6ec8c2d4729488d68f6111730
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;Ecommerce test run&quot;&gt;
+&lt;suite thread-count=&quot;3&quot; name=&quot;Ecommerce test run&quot; parallel=&quot;methods&quot;&gt;
   &lt;test name=&quot;Place Order&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.ecommerce.selenium.pagefactory.framework.OrderFlow&quot;/&gt;
@@ -206,11 +207,19 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'PlaceOrder')
+data.setCell(0, 1, 'placeorder')
 data.setCell(0, 2, 'com.ecommerce.selenium.pagefactory.framework.OrderFlow')
-data.setCell(0, 3, 62827);
+data.setCell(0, 3, 38493);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'Addtocart')
+data.setCell(1, 2, 'com.ecommerce.selenium.pagefactory.framework.OrderFlow')
+data.setCell(1, 3, 37735);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'Checkoutcart')
+data.setCell(2, 2, 'com.ecommerce.selenium.pagefactory.framework.OrderFlow')
+data.setCell(2, 3, 30972);
 window.suiteTableData['Ecommerce_test_run']= { tableData: data, tableDiv: 'times-div-Ecommerce_test_run'}
 return data;
 }
@@ -243,9 +252,15 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.ecommerce.selenium.pagefactory.framework.OrderFlow</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">PlaceOrder</span>
+                <span class="method-name">Addtocart</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Checkoutcart</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">placeorder</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
