--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d2e7d9">  <td>17/10/30 19:16:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderFlow.PlaceOrder()[pri:0, instance:com.ecommerce.selenium.pagefactory.framework.OrderFlow@2b98378d]">PlaceOrder</td> 
-  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>17/11/20 20:20:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderFlow.Addtocart()[pri:0, instance:com.ecommerce.selenium.pagefactory.framework.OrderFlow@61832929]">Addtocart</td> 
+  <td>main@1454127753</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>17/11/20 20:20:17</td>   <td>13660</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderFlow.Checkoutcart()[pri:0, instance:com.ecommerce.selenium.pagefactory.framework.OrderFlow@61832929]">Checkoutcart</td> 
+  <td>main@1454127753</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>17/11/20 20:20:52</td>   <td>48340</td> <td>&nbsp;</td><td title="&lt;&lt;OrderFlow.Closeapp()[pri:0, instance:com.ecommerce.selenium.pagefactory.framework.OrderFlow@61832929]">&lt;&lt;Closeapp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>17/11/20 20:19:56</td>   <td>-7365</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OrderFlow.Login()[pri:0, instance:com.ecommerce.selenium.pagefactory.framework.OrderFlow@61832929]">&gt;&gt;Login</td> 
+<td>&nbsp;</td>  <td>main@1454127753</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>17/11/20 20:20:10</td>   <td>6541</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OrderFlow.Login()[pri:0, instance:com.ecommerce.selenium.pagefactory.framework.OrderFlow@61832929]">&gt;&gt;Login</td> 
+<td>&nbsp;</td>  <td>main@1454127753</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>17/11/20 20:20:28</td>   <td>24503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OrderFlow.Login()[pri:0, instance:com.ecommerce.selenium.pagefactory.framework.OrderFlow@61832929]">&gt;&gt;Login</td> 
+<td>&nbsp;</td>  <td>main@1454127753</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>17/11/20 20:20:08</td>   <td>5069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;OrderFlow.Logout()[pri:0, instance:com.ecommerce.selenium.pagefactory.framework.OrderFlow@61832929]">&lt;&lt;Logout</td> 
+<td>&nbsp;</td>  <td>main@1454127753</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>17/11/20 20:20:26</td>   <td>23111</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;OrderFlow.Logout()[pri:0, instance:com.ecommerce.selenium.pagefactory.framework.OrderFlow@61832929]">&lt;&lt;Logout</td> 
+<td>&nbsp;</td>  <td>main@1454127753</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>17/11/20 20:20:50</td>   <td>46973</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;OrderFlow.Logout()[pri:0, instance:com.ecommerce.selenium.pagefactory.framework.OrderFlow@61832929]">&lt;&lt;Logout</td> 
+<td>&nbsp;</td>  <td>main@1454127753</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>17/11/20 20:19:47</td>   <td>-16479</td> <td>&nbsp;</td><td title="&gt;&gt;OrderFlow.Openapp()[pri:0, instance:com.ecommerce.selenium.pagefactory.framework.OrderFlow@61832929]">&gt;&gt;Openapp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>17/11/20 20:20:35</td>   <td>31524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderFlow.placeorder()[pri:0, instance:com.ecommerce.selenium.pagefactory.framework.OrderFlow@61832929]">placeorder</td> 
+  <td>main@1454127753</td>   <td></td> </tr>
 </table>
