--- a/test-output/old/Ecommerce test run/methods-alphabetical.html
+++ b/test-output/old/Ecommerce test run/methods-alphabetical.html
@@ -1,2 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Ecommerce test run</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<table border="1">
+<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
+<tr bgcolor="62aa67">  <td>18/01/04 17:11:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BroadLeaf_DesktopFlow.Addtocart()[pri:0, instance:com.ecommerce.selenium.pagefactory.framework.BroadLeaf_DesktopFlow@2f686d1f]">Addtocart</td> 
+  <td>pool-1-thread-1@571685250</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>18/01/04 17:11:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BroadLeaf_DesktopFlow.Checkoutcart()[pri:0, instance:com.ecommerce.selenium.pagefactory.framework.BroadLeaf_DesktopFlow@2f686d1f]">Checkoutcart</td> 
+  <td>pool-1-thread-2@1337931845</td>   <td></td> </tr>
 </table>
