--- a/test-output/old/Ecommerce test run/classes.html
+++ b/test-output/old/Ecommerce test run/classes.html
@@ -11,6 +11,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>placeorder</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>Checkoutcart</td>
 <td>&nbsp;</td></tr>
 <tr>
